[gd_scene load_steps=28 format=3 uid="uid://y75tqsouhvsj"]

[ext_resource type="Script" path="res://scenes/UI/UserInterface.gd" id="1_a1vov"]
[ext_resource type="Texture2D" uid="uid://bnf6gxjevx6cq" path="res://asset/UI/play_pause_icon.png" id="2_7f32f"]
[ext_resource type="Texture2D" uid="uid://b5rkjwrjqynub" path="res://asset/UI/meun_gear.png" id="2_b0tb2"]
[ext_resource type="Texture2D" uid="uid://ddtav8vrfemdh" path="res://asset/UI/Cosmonaut2.png" id="2_ekjax"]
[ext_resource type="Theme" uid="uid://8r1asy6d080g" path="res://asset/UI/gameplay_ui.tres" id="2_hhg2b"]
[ext_resource type="Script" path="res://scenes/UI/Play_pause.gd" id="4_mkq0e"]
[ext_resource type="Script" path="res://scenes/UI/Button.gd" id="4_vqi8o"]
[ext_resource type="Script" path="res://scenes/UI/Menu.gd" id="6_ndotk"]
[ext_resource type="Texture2D" uid="uid://bvff4ai6tni36" path="res://asset/placeholders/sprites/fantasy_items/MV Icons PACK 2 - ALL.png" id="7_57ifu"]
[ext_resource type="Script" path="res://scenes/UI/ProgressBar.gd" id="7_aem6l"]
[ext_resource type="Texture2D" uid="uid://dvvfcxhaee3cs" path="res://asset/UI/bottone.png" id="8_6bcaq"]
[ext_resource type="Texture2D" uid="uid://bc6mcbs2e6r2m" path="res://asset/UI/Arena.png" id="10_oc6a6"]
[ext_resource type="Texture2D" uid="uid://derjekg58523h" path="res://asset/UI/Cosmonaut .png" id="11_nnhtg"]
[ext_resource type="Script" path="res://scenes/UI/StartWaveButton.gd" id="11_v3bxa"]
[ext_resource type="Texture2D" uid="uid://bev66ubkgtmwa" path="res://asset/UI/Diplomat .png" id="12_cpft1"]
[ext_resource type="Texture2D" uid="uid://dlvk17akumla4" path="res://asset/UI/rELAX .png" id="13_4llqn"]
[ext_resource type="Texture2D" uid="uid://dftq42w66m1kk" path="res://asset/UI/Resurrection .png" id="14_rkbxv"]
[ext_resource type="Texture2D" uid="uid://cd3djusycxggx" path="res://asset/UI/Shift sand .png" id="15_5s17k"]
[ext_resource type="Texture2D" uid="uid://u8sv4xgputix" path="res://asset/UI/SignalFail.png" id="16_3ymhm"]
[ext_resource type="Texture2D" uid="uid://d233oc1bi77qs" path="res://asset/UI/WEIR FIC .png" id="17_2j5vh"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_em7j1"]
texture = ExtResource("8_6bcaq")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0

[sub_resource type="InputEventKey" id="InputEventKey_fn3lp"]
device = -1
keycode = 32
unicode = 32

[sub_resource type="Shortcut" id="Shortcut_nypv8"]
events = [SubResource("InputEventKey_fn3lp")]

[sub_resource type="InputEventKey" id="InputEventKey_rcvux"]
device = -1
keycode = 4194305

[sub_resource type="Shortcut" id="Shortcut_e4kgy"]
events = [SubResource("InputEventKey_rcvux")]

[sub_resource type="AtlasTexture" id="AtlasTexture_l88xp"]
atlas = ExtResource("7_57ifu")
region = Rect2(256, 161, 33, 31)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ta5e4"]
texture = ExtResource("8_6bcaq")

[node name="GameplayUI" type="Control"]
process_mode = 3
z_index = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 1
script = ExtResource("1_a1vov")

[node name="PauseSymbol" type="CenterContainer" parent="."]
unique_name_in_owner = true
visible = false
z_index = 1
z_as_relative = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="PauseSymbol"]
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 2
color = Color(0, 0, 0, 0.262745)

[node name="TextureRect" type="TextureRect" parent="PauseSymbol"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
texture = ExtResource("2_7f32f")
expand_mode = 4

[node name="Menu_buttons" type="GridContainer" parent="."]
z_index = 1
z_as_relative = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -68.0
offset_bottom = 32.0
grow_horizontal = 0
columns = 2
metadata/_edit_use_anchors_ = true

[node name="Play_pause" type="Button" parent="Menu_buttons"]
unique_name_in_owner = true
process_mode = 3
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
focus_mode = 0
theme = ExtResource("2_hhg2b")
theme_override_styles/disabled = SubResource("StyleBoxTexture_em7j1")
shortcut = SubResource("Shortcut_nypv8")
icon = ExtResource("2_7f32f")
script = ExtResource("4_mkq0e")

[node name="Menu" type="Button" parent="Menu_buttons"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme = ExtResource("2_hhg2b")
shortcut = SubResource("Shortcut_e4kgy")
icon = ExtResource("2_b0tb2")
script = ExtResource("6_ndotk")
scene_to_load_path = "res://scenes/UI/InGameSettings.tscn"

[node name="ShopPanel" type="Panel" parent="."]
unique_name_in_owner = true
z_index = 1
z_as_relative = false
custom_minimum_size = Vector2(320, 0)
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
grow_vertical = 2
theme = ExtResource("2_hhg2b")

[node name="VBoxContainer" type="VBoxContainer" parent="ShopPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Money" type="HBoxContainer" parent="ShopPanel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="MoneyLabel" type="Label" parent="ShopPanel/VBoxContainer/Money"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
text = "Scrap
"

[node name="TextureRect" type="TextureRect" parent="ShopPanel/VBoxContainer/Money"]
layout_mode = 2
texture = SubResource("AtlasTexture_l88xp")

[node name="HPDistribute" type="HBoxContainer" parent="ShopPanel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="HPLabelMargin" type="MarginContainer" parent="ShopPanel/VBoxContainer/HPDistribute"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/margin_left = 20

[node name="HPLabel" type="Label" parent="ShopPanel/VBoxContainer/HPDistribute/HPLabelMargin"]
layout_mode = 2
size_flags_horizontal = 4
text = "HP"

[node name="HPBar" type="MarginContainer" parent="ShopPanel/VBoxContainer/HPDistribute"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_right = 20

[node name="HPProgressbar" type="ProgressBar" parent="ShopPanel/VBoxContainer/HPDistribute/HPBar"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
size_flags_stretch_ratio = 0.0
theme = ExtResource("2_hhg2b")
step = 1.0
value = 100.0
show_percentage = false
script = ExtResource("7_aem6l")

[node name="MechaShop" type="GridContainer" parent="ShopPanel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/h_separation = 64
theme_override_constants/v_separation = 32
columns = 2

[node name="ShopItem2" type="Button" parent="ShopPanel/VBoxContainer/MechaShop"]
unique_name_in_owner = true
process_mode = 1
custom_minimum_size = Vector2(90, 128)
layout_mode = 2
theme = ExtResource("2_hhg2b")
icon_alignment = 1
script = ExtResource("4_vqi8o")

[node name="TextureRect" type="TextureRect" parent="ShopPanel/VBoxContainer/MechaShop/ShopItem2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -48.0
offset_right = 32.0
offset_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("10_oc6a6")
expand_mode = 5

[node name="Panel" type="Panel" parent="ShopPanel/VBoxContainer/MechaShop/ShopItem2"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.211111
anchor_top = 0.882813
anchor_right = 0.788889
anchor_bottom = 1.13281
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 1
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="ShopPanel/VBoxContainer/MechaShop/ShopItem2/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 17.0
grow_horizontal = 2
grow_vertical = 2
text = "100"
horizontal_alignment = 1

[node name="ShopItem3" type="Button" parent="ShopPanel/VBoxContainer/MechaShop"]
unique_name_in_owner = true
process_mode = 1
custom_minimum_size = Vector2(90, 128)
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_hhg2b")
icon_alignment = 1
script = ExtResource("4_vqi8o")

[node name="TextureRect" type="TextureRect" parent="ShopPanel/VBoxContainer/MechaShop/ShopItem3"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -48.0
offset_right = 32.0
offset_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("11_nnhtg")

[node name="Panel" type="Panel" parent="ShopPanel/VBoxContainer/MechaShop/ShopItem3"]
custom_minimum_size = Vector2(30, 32)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.211111
anchor_top = 0.882813
anchor_right = 0.788889
anchor_bottom = 1.13281
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 1
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="ShopPanel/VBoxContainer/MechaShop/ShopItem3/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 17.0
grow_horizontal = 2
grow_vertical = 2
text = "100"
horizontal_alignment = 1

[node name="ShopItem4" type="Button" parent="ShopPanel/VBoxContainer/MechaShop"]
unique_name_in_owner = true
process_mode = 1
custom_minimum_size = Vector2(90, 128)
layout_mode = 2
theme = ExtResource("2_hhg2b")
icon_alignment = 1
script = ExtResource("4_vqi8o")

[node name="TextureRect" type="TextureRect" parent="ShopPanel/VBoxContainer/MechaShop/ShopItem4"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -48.0
offset_right = 32.0
offset_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("12_cpft1")

[node name="Panel" type="Panel" parent="ShopPanel/VBoxContainer/MechaShop/ShopItem4"]
custom_minimum_size = Vector2(30, 32)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.211111
anchor_top = 0.882813
anchor_right = 0.788889
anchor_bottom = 1.13281
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 1
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="ShopPanel/VBoxContainer/MechaShop/ShopItem4/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 17.0
grow_horizontal = 2
grow_vertical = 2
text = "100"
horizontal_alignment = 1

[node name="ShopItem5" type="Button" parent="ShopPanel/VBoxContainer/MechaShop"]
unique_name_in_owner = true
process_mode = 1
custom_minimum_size = Vector2(90, 128)
layout_mode = 2
theme = ExtResource("2_hhg2b")
icon_alignment = 1
script = ExtResource("4_vqi8o")

[node name="TextureRect" type="TextureRect" parent="ShopPanel/VBoxContainer/MechaShop/ShopItem5"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -48.0
offset_right = 32.0
offset_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("13_4llqn")

[node name="Panel" type="Panel" parent="ShopPanel/VBoxContainer/MechaShop/ShopItem5"]
custom_minimum_size = Vector2(30, 32)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.211111
anchor_top = 0.882813
anchor_right = 0.788889
anchor_bottom = 1.13281
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 1
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="ShopPanel/VBoxContainer/MechaShop/ShopItem5/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 17.0
grow_horizontal = 2
grow_vertical = 2
text = "100"
horizontal_alignment = 1

[node name="ShopItem6" type="Button" parent="ShopPanel/VBoxContainer/MechaShop"]
unique_name_in_owner = true
process_mode = 1
custom_minimum_size = Vector2(90, 128)
layout_mode = 2
theme = ExtResource("2_hhg2b")
icon_alignment = 1
script = ExtResource("4_vqi8o")

[node name="TextureRect" type="TextureRect" parent="ShopPanel/VBoxContainer/MechaShop/ShopItem6"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -48.0
offset_right = 32.0
offset_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("14_rkbxv")

[node name="Panel" type="Panel" parent="ShopPanel/VBoxContainer/MechaShop/ShopItem6"]
custom_minimum_size = Vector2(30, 32)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.211111
anchor_top = 0.882813
anchor_right = 0.788889
anchor_bottom = 1.13281
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 1
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="ShopPanel/VBoxContainer/MechaShop/ShopItem6/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 17.0
grow_horizontal = 2
grow_vertical = 2
text = "100"
horizontal_alignment = 1

[node name="ShopItem7" type="Button" parent="ShopPanel/VBoxContainer/MechaShop"]
unique_name_in_owner = true
process_mode = 1
custom_minimum_size = Vector2(90, 128)
layout_mode = 2
theme = ExtResource("2_hhg2b")
icon_alignment = 1
script = ExtResource("4_vqi8o")

[node name="TextureRect" type="TextureRect" parent="ShopPanel/VBoxContainer/MechaShop/ShopItem7"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -48.0
offset_right = 32.0
offset_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("15_5s17k")

[node name="Panel" type="Panel" parent="ShopPanel/VBoxContainer/MechaShop/ShopItem7"]
custom_minimum_size = Vector2(30, 32)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.211111
anchor_top = 0.882813
anchor_right = 0.788889
anchor_bottom = 1.13281
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 1
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="ShopPanel/VBoxContainer/MechaShop/ShopItem7/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 17.0
grow_horizontal = 2
grow_vertical = 2
text = "100"
horizontal_alignment = 1

[node name="ShopItem8" type="Button" parent="ShopPanel/VBoxContainer/MechaShop"]
unique_name_in_owner = true
process_mode = 1
custom_minimum_size = Vector2(90, 128)
layout_mode = 2
theme = ExtResource("2_hhg2b")
icon_alignment = 1
script = ExtResource("4_vqi8o")

[node name="TextureRect" type="TextureRect" parent="ShopPanel/VBoxContainer/MechaShop/ShopItem8"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -48.0
offset_right = 32.0
offset_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("16_3ymhm")

[node name="Panel" type="Panel" parent="ShopPanel/VBoxContainer/MechaShop/ShopItem8"]
custom_minimum_size = Vector2(30, 32)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.211111
anchor_top = 0.882813
anchor_right = 0.788889
anchor_bottom = 1.13281
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 1
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="ShopPanel/VBoxContainer/MechaShop/ShopItem8/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 17.0
grow_horizontal = 2
grow_vertical = 2
text = "100"
horizontal_alignment = 1

[node name="ShopItem9" type="Button" parent="ShopPanel/VBoxContainer/MechaShop"]
unique_name_in_owner = true
process_mode = 1
custom_minimum_size = Vector2(90, 128)
layout_mode = 2
theme = ExtResource("2_hhg2b")
icon_alignment = 1
script = ExtResource("4_vqi8o")

[node name="TextureRect" type="TextureRect" parent="ShopPanel/VBoxContainer/MechaShop/ShopItem9"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -48.0
offset_right = 32.0
offset_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("17_2j5vh")

[node name="Panel" type="Panel" parent="ShopPanel/VBoxContainer/MechaShop/ShopItem9"]
custom_minimum_size = Vector2(30, 32)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.211111
anchor_top = 0.882813
anchor_right = 0.788889
anchor_bottom = 1.13281
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 1
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="ShopPanel/VBoxContainer/MechaShop/ShopItem9/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 17.0
grow_horizontal = 2
grow_vertical = 2
text = "100"
horizontal_alignment = 1

[node name="Mecha-TimeTravel" type="MarginContainer" parent="ShopPanel/VBoxContainer"]
layout_mode = 2

[node name="TimeTravelButton" type="Button" parent="ShopPanel/VBoxContainer/Mecha-TimeTravel"]
unique_name_in_owner = true
process_mode = 1
custom_minimum_size = Vector2(180, 96)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 20
icon_alignment = 1
script = ExtResource("4_vqi8o")

[node name="TextureRect" type="TextureRect" parent="ShopPanel/VBoxContainer/Mecha-TimeTravel/TimeTravelButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -81.0
offset_top = -53.0
offset_right = -17.0
offset_bottom = 43.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_ekjax")

[node name="Label" type="Label" parent="ShopPanel/VBoxContainer/Mecha-TimeTravel/TimeTravelButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 0.999939
offset_top = -40.0
offset_right = 64.9999
offset_bottom = 41.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "Buy now
Pay
Later"
horizontal_alignment = 1

[node name="StartWaveButton" type="Button" parent="ShopPanel/VBoxContainer"]
unique_name_in_owner = true
process_mode = 1
custom_minimum_size = Vector2(180, 96)
layout_mode = 2
size_flags_horizontal = 4
text = "Start Wave"
icon_alignment = 1
script = ExtResource("11_v3bxa")

[node name="Wave" type="HBoxContainer" parent="ShopPanel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="WaveLabel" type="Label" parent="ShopPanel/VBoxContainer/Wave"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
text = "Wave:"

[node name="Tooltip" type="Panel" parent="."]
unique_name_in_owner = true
visible = false
z_index = 1
custom_minimum_size = Vector2(200, 200)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -125.0
offset_right = 100.0
offset_bottom = 125.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme = ExtResource("2_hhg2b")
theme_override_styles/panel = SubResource("StyleBoxTexture_ta5e4")

[node name="CenterContainer" type="CenterContainer" parent="Tooltip"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Tooltip/CenterContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Tooltip/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Nome"

[node name="Label2" type="Label" parent="Tooltip/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Descrizione"

[node name="Label3" type="Label" parent="Tooltip/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Prezzo
"

[connection signal="pressed" from="Menu_buttons/Play_pause" to="Menu_buttons/Play_pause" method="_on_pressed"]
[connection signal="pressed" from="Menu_buttons/Menu" to="Menu_buttons/Menu" method="_on_pressed"]
[connection signal="mouse_entered" from="ShopPanel/VBoxContainer/MechaShop/ShopItem2" to="ShopPanel/VBoxContainer/MechaShop/ShopItem2" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="ShopPanel/VBoxContainer/MechaShop/ShopItem2" to="ShopPanel/VBoxContainer/MechaShop/ShopItem2" method="_on_mouse_exited"]
[connection signal="pressed" from="ShopPanel/VBoxContainer/MechaShop/ShopItem2" to="ShopPanel/VBoxContainer/MechaShop/ShopItem2" method="_on_pressed"]
[connection signal="mouse_entered" from="ShopPanel/VBoxContainer/MechaShop/ShopItem3" to="ShopPanel/VBoxContainer/MechaShop/ShopItem3" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="ShopPanel/VBoxContainer/MechaShop/ShopItem3" to="ShopPanel/VBoxContainer/MechaShop/ShopItem3" method="_on_mouse_exited"]
[connection signal="pressed" from="ShopPanel/VBoxContainer/MechaShop/ShopItem3" to="ShopPanel/VBoxContainer/MechaShop/ShopItem3" method="_on_pressed"]
[connection signal="mouse_entered" from="ShopPanel/VBoxContainer/MechaShop/ShopItem4" to="ShopPanel/VBoxContainer/MechaShop/ShopItem4" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="ShopPanel/VBoxContainer/MechaShop/ShopItem4" to="ShopPanel/VBoxContainer/MechaShop/ShopItem4" method="_on_mouse_exited"]
[connection signal="pressed" from="ShopPanel/VBoxContainer/MechaShop/ShopItem4" to="ShopPanel/VBoxContainer/MechaShop/ShopItem4" method="_on_pressed"]
[connection signal="mouse_entered" from="ShopPanel/VBoxContainer/MechaShop/ShopItem5" to="ShopPanel/VBoxContainer/MechaShop/ShopItem5" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="ShopPanel/VBoxContainer/MechaShop/ShopItem5" to="ShopPanel/VBoxContainer/MechaShop/ShopItem5" method="_on_mouse_exited"]
[connection signal="pressed" from="ShopPanel/VBoxContainer/MechaShop/ShopItem5" to="ShopPanel/VBoxContainer/MechaShop/ShopItem5" method="_on_pressed"]
[connection signal="mouse_entered" from="ShopPanel/VBoxContainer/MechaShop/ShopItem6" to="ShopPanel/VBoxContainer/MechaShop/ShopItem6" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="ShopPanel/VBoxContainer/MechaShop/ShopItem6" to="ShopPanel/VBoxContainer/MechaShop/ShopItem6" method="_on_mouse_exited"]
[connection signal="pressed" from="ShopPanel/VBoxContainer/MechaShop/ShopItem6" to="ShopPanel/VBoxContainer/MechaShop/ShopItem6" method="_on_pressed"]
[connection signal="mouse_entered" from="ShopPanel/VBoxContainer/MechaShop/ShopItem7" to="ShopPanel/VBoxContainer/MechaShop/ShopItem7" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="ShopPanel/VBoxContainer/MechaShop/ShopItem7" to="ShopPanel/VBoxContainer/MechaShop/ShopItem7" method="_on_mouse_exited"]
[connection signal="pressed" from="ShopPanel/VBoxContainer/MechaShop/ShopItem7" to="ShopPanel/VBoxContainer/MechaShop/ShopItem7" method="_on_pressed"]
[connection signal="mouse_entered" from="ShopPanel/VBoxContainer/MechaShop/ShopItem8" to="ShopPanel/VBoxContainer/MechaShop/ShopItem8" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="ShopPanel/VBoxContainer/MechaShop/ShopItem8" to="ShopPanel/VBoxContainer/MechaShop/ShopItem8" method="_on_mouse_exited"]
[connection signal="pressed" from="ShopPanel/VBoxContainer/MechaShop/ShopItem8" to="ShopPanel/VBoxContainer/MechaShop/ShopItem8" method="_on_pressed"]
[connection signal="mouse_entered" from="ShopPanel/VBoxContainer/MechaShop/ShopItem9" to="ShopPanel/VBoxContainer/MechaShop/ShopItem9" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="ShopPanel/VBoxContainer/MechaShop/ShopItem9" to="ShopPanel/VBoxContainer/MechaShop/ShopItem9" method="_on_mouse_exited"]
[connection signal="pressed" from="ShopPanel/VBoxContainer/MechaShop/ShopItem9" to="ShopPanel/VBoxContainer/MechaShop/ShopItem9" method="_on_pressed"]
[connection signal="mouse_entered" from="ShopPanel/VBoxContainer/Mecha-TimeTravel/TimeTravelButton" to="ShopPanel/VBoxContainer/Mecha-TimeTravel/TimeTravelButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="ShopPanel/VBoxContainer/Mecha-TimeTravel/TimeTravelButton" to="ShopPanel/VBoxContainer/Mecha-TimeTravel/TimeTravelButton" method="_on_mouse_exited"]
[connection signal="pressed" from="ShopPanel/VBoxContainer/Mecha-TimeTravel/TimeTravelButton" to="ShopPanel/VBoxContainer/Mecha-TimeTravel/TimeTravelButton" method="_on_pressed"]
[connection signal="pressed" from="ShopPanel/VBoxContainer/StartWaveButton" to="ShopPanel/VBoxContainer/StartWaveButton" method="_on_pressed"]
